Fixed horizontal webkit-scrollbar height

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,10 @@
   width: 8px;
 }
 
+::-webkit-scrollbar:horizontal{
+  height: 8px;
+}
+
 *::-webkit-scrollbar-track {
   background: var(--primary);
   border-radius: 0px;
